<resources>
    <string name="app_name">AppApp</string>
    <string name="okHint">OK!</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="welcome">Welcome!</string>
    <string name="register">register</string>
    <string name="id_number">Id Number</string>
    <string name="make_an_appointment">MAKE AN APPOINTMENT</string>
    <string name="cancel_an_appointment">CANCEL AN APPOINTMENT</string>
    <string name="postpone_an_appointment">POSTPONE AN APPOINTMENT</string>
    <string name="date">date</string>
    <string name="date_picked">date picked</string>
    <string name="cancel_the_appointment">CANCEL THE APPOINTMENT</string>
    <string name="logout">logout</string>
    <string name="click_twice">click twice to get Dates</string>
    <string name="confirm">CONFIRM</string>
</resources>
